--- a/wp-content/themes/jlsmartbets/development/scss/_legend.scss
+++ b/wp-content/themes/jlsmartbets/development/scss/_legend.scss
@@ -4,6 +4,7 @@ $small: "only screen and (max-width: 767px)";
 $medium: "only screen and (min-width: 768px)";
 $max-medium: "only screen and (max-width: 1024px)";
 $large: "only screen and (min-width: 1025px)";
+$xlarge: "only screen and (min-width: 1296px)";
 
 $black: #000000;
 $white: #ffffff;
